# turing-multi-agent-system

./: .dockerignore  .env.example.root  .gitignore  DOCKER_DEPLOYMENT.md  Project_Documentation.md  README.md  cloudbuild.yaml  deploy.bat  deploy.sh  docker-compose.compliance.yml  docker-compose.dev.yml  docker-compose.yml  dockerfile  dockerfile1_old  nginx.conf  sample_env.txt  start.sh
jnj_audit_copilot/: README.md  activities.json  makefile  pyproject.toml  run_agent.sh  run_app.py  run_app_new.py  run_app_redis.py
jnj_audit_copilot/app/common/: config.py  constants.py  descriptions.py  risk_score_config.py
jnj_audit_copilot/app/facade/: extraction_facade.py  ingestion_facade.py
jnj_audit_copilot/app/prompt_hub/: extraction_prompts.py  inspection_prompts.py  selfrag_prompts.py  sgr_pd_agent_prompts.py  trial_supervisor_prompts.py
jnj_audit_copilot/app/risk_score/: IR_risk_score.py  css_risk_score.py  ml_risk_score.py
jnj_audit_copilot/app/scripts/: box_copy_files.py  transfer_summaries_to_postgre.py  transfer_to_postgre.py
jnj_audit_copilot/app/utils/: api_requests.py  create_guidelines_db.py  create_summaries_db.py  create_vector_store.py  filter_descrepancy_data.py  helpers.py  inspect_mongodb.py  langchain_azure_openai.py  log_setup.py  mongo_vcore_vector_client.py  response_classes.py  retriever.py  setup_redis.py  sql_generator.py  state_definitions.py  tool_nodes.py
jnj_audit_copilot/documents/: trial_site_site_area_checklist.xlsx
jnj_audit_copilot/documents/Demo/: Adverse Events.xlsx  protocol_deviation.xlsx
jnj_audit_copilot/documents/Risk_Scores/: risk_scores.xlsx
jnj_audit_copilot/documents/SGR/: new_desc.csv  pd_synthetic_data.csv  (+6 more)
scheduler_app/: README.md  makefile  pyproject.toml
scheduler_app/app/: app.py  compliance_review.py  config.py  middle_parser.py  setup_redis.py  streamlit_app.py
scheduler_app/tests/: redis_test.py
(+290 files in other folders)
